# shrine-open-diet

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Dockerfile  README.md  railway.toml  requirements-test.txt
.claude/feedback/: 20260506-013000-drug-bioactive-bridge.md
.github/workflows/: ci.yml  deploy-mcp.yml  mcp-ci.yml
docs/: ARCHITECTURE.md  DATASET_PROVENANCE.md  INDEX.md  KG_COMPLETENESS_AUDIT.md  RESEARCHER_GUIDE.md  TESTING.md  data-audit-results.md  data-sources-catalog.md  graphiti-neo4j-guide.md  kg-architecture-design.md  kg-coverage-audit.md  kg-ingestion-comparison.md  presentation.html  unified-diet-kg-architecture.md
docs/adr/: 0001-vector-storage-on-aura.md  0007-compound-identity-bridge.md  0008-disease-canonicalization.md  0010-diet-scoring.md
mcp/: README.md  pyproject.toml
mcp-herbal-botanicals/lightrag/: fix_unknown_entities.py  ingest_unified.py
mcp-herbal-botanicals/src/: HerbalDBAdapter.ts
mcp/src/kg_mcp/: __init__.py  auth.py  client.py  schemas.py  server.py  tools.py
mcp/tests/: README.md
mcp/tests/e2e/: _braintrust_logger.py  conftest.py  test_live_endpoints.py  test_tool_roundtrips.py
mcp/tests/unit/: test_auth.py  test_client.py  test_server_registration.py  test_tools.py
research-journal/: DESIGN-PIVOT-2026-04-22.md  DESIGN.md  HANDOFF-blockers-to-engineering.md  HANDOFF-railway-deploy.md  HANDOFF-research-via-mcp.md  README.md
research-journal/plans/: 2026-04-22-program.md  2026-04-22-subsystem-a-data-moat.md  2026-04-22-subsystem-f-evaluation-harness.md  2026-04-22-subsystem-h-clinical-research-team.md  2026-04-26-kg-unification-priorities.md  2026-04-29-mcp-gateway-design.md  2026-04-29-v2-benchmark-expansion.md  2026-05-01-ncbi-enrichment-and-entity-resolution-design.md  (+4 more)
scripts/: start_combined.sh
shrine-diet-bioactivity/: .env.template  .gitignore  .mcp.json  Makefile  README.md  package-lock.json  package.json  vitest.config.ts
(+325 files in other folders)
