[project]
name = "kg-mcp"
version = "0.1.0"
description = "MCP gateway over the shrine-diet-bioactivity LightRAG KG"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.8",  # Clerk JWT verification
]

[project.scripts]
kg-mcp-server = "kg_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: live HTTP tests against the deployed MCP gateway (requires KG_MCP_E2E_URL)",
]
addopts = ["-m", "not e2e"]
