[project]
name = "kg-mcp"
version = "0.1.0"
description = "MCP gateway over the shrine-diet-bioactivity LightRAG KG"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyjwt[crypto]>=2.8",  # Clerk JWT verification
]

[project.optional-dependencies]
# Optional integration-test extras. ``braintrust`` is soft-imported by
# ``tests/e2e/_braintrust_logger.py``; tests run as a no-op when the SDK
# is not installed and/or ``BRAINTRUST_API_KEY`` is unset.
test = [
    "braintrust>=0.0.180",
]

[project.scripts]
kg-mcp-server = "kg_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Pure unit test, no I/O, no network",
    "integration: Real components",
    "e2e: Real network call to staged services",
    "live_llm: Calls real LLM",
    "live_llm_replay: Cassette replay",
    "aura: Hits live Neo4j Aura",
    "slow: Runtime > 30s",
]
addopts = ["-m", "not e2e"]
